Implemented production stages